# wol-proxy

./: .env  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
scripts/: arm7-build.sh  cookie.sh  create-service.sh  curl.sh  magic_packet.txt  status.sh  wol-proxy.service
src/: main.rs  openssltls.rs  security.rs  wol.rs
