[package]
name = "wol-remote"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
anyhow = "1.0.95"
base64 = "0.22.1"
env_logger = "0.11.6"
log = "0.4.22"
mac_address = "1.1.7"
serde = { version= "1.0.217", features = ["derive"] }
