[package]
name = "wol-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-governor = "0.8.0"
actix-web = { version = "4.9.0", features = ["rustls-0_23", "openssl"] }
anyhow = "1.0.95"
env_logger = "0.11.6"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.22"
mac_address = "1.1.7"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
rustls = "0.23.20"
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
dotenvy = "0.15.7"
openssl = "0.10.68"
